# WikiVoice

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 42788dc1612e_users.py  a1b2c3d4e5f6_add_sessions_and_queries.py
backend/api/: __init__.py  auth_router.py  dependencies.py  error_responses.py  health_router.py  query_router.py  session_router.py  success_response.py
backend/api_requests/: __init__.py  check_user_exists_request.py  login_request.py  query_request.py  register_user_request.py  session_request.py
backend/app/: __init__.py  auth_middleware.py  config.py  constants.py  exception_handlers.py  factory.py  http_client.py  logging_config.py  logging_middleware.py  middleware.py  request_timeout_middleware.py  response_headers_middleware.py  routers.py  stytch_client.py
backend/application/: __init__.py  auth_service.py  session_service.py  user_service.py
backend/custom_exceptions/: __init__.py  base.py  database_connection_error.py  database_error.py  invalid_credentials_error.py  invalid_session_token.py  stytch_api_error.py  user_not_found.py
backend/domain/entities/: user.py
backend/domain/mappers/: user_mapper.py
backend/domain/responses/: __init__.py  auth_result.py  check_user_exists_response.py  query_response.py  session_data.py  session_list_response.py  session_response.py  user_response.py
backend/infrastructure/: __init__.py  query_repository.py  rag_service.py  session_repository.py  user_repository.py  wikipedia_client.py
backend/models/: __init__.py  database.py  query_model.py  session_model.py  user_model.py
backend/tests/: conftest.py  test_auth_service.py  test_query_validation.py  test_rag_service.py  test_session_service.py  test_user_service.py  test_wikipedia_client.py
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+70 files in other folders)
